# juniper

./: .gitignore  README.md  pyproject.toml  run_valgrind.sh  setup.py
benchmarks/: cache_bench.py  formated_results.md  results.md  results_full.md  short2_results.md  short_results.md
benchmarks/hashmaps/: bench.py  memory_runner.py  memory_worker.py  modified_bench.py
benchmarks/hashmaps/modified_reports/: bench_comparison.md  bench_custom_N1000.md  bench_custom_N10000.md  bench_custom_N1000000.md  bench_custom_N2000000.md  bench_custom_N30000.md  bench_custom_N500000.md  (+15 more)
benchmarks/lists/: bench.py  memory_runner.py  memory_worker.py
benchmarks/trees/: bench.py  memory_runner.py  memory_worker.py
docs/: API.md  cache.md  get_doc.py
examples/: API.md  additions_lists.py  arc.py  avltree.py  bhashmap.py  bstset.py  btree.py  dump_api.py  fifo.py  hashmap.py  hashmap2.py  lfu.py  list.py  lists.py  lru.py  mru.py  rbtree.py  rhmap.py  skiplistset.py  swisstable.py  ttl.py
source/: avltree.c  avltree.h  bst.c  bst.h  bthashmap.c  bthashmap.h  btree.c  btree.h  btreemap.c  btreemap.h  dlist.c  dlist.h  hashmap.c  hashmap.h  rbtree.c  rbtree.h  rhmap.c  rhmap.h  skiplist.c  skiplist.h  slist.c  slist.h  swisstable.c  swisstable.h
source/hashmap/: bucket.c  bucket.h  bucket_list.c  bucket_list.h  bucket_tree.c  bucket_tree.h  hashmap.c  hashmap.h  hashmap_internal.h  hashmap_iter.c  hashmap_iter.h
src/juniper/: __init__.py  cache_policies.py  data_structures.py
src/junipre/: data_structures.py
tests/: all.py  arc.py  fifo.py  lfu.py  lru.py  mru.py  ttl.py
(+51 files in other folders)
