[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper"
version = "0.1.0"
description = "Caching library with C backend"
authors = [{name = "Arihina"}]
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["juniper*"]
